--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
+    "expo-application": "~4.1.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-random": "~12.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-web-browser": "~10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "twrnc": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
